--- a/MixwellSoftware/MixwellWebAPI/Employees.html
+++ b/MixwellSoftware/MixwellWebAPI/Employees.html
@@ -5,6 +5,8 @@
     <!--<title></title>-->    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
+        //run this service from client http://localhost:13194/Employees.html
+
         $(document).ready(function () {
             var ulemployees = $('#ulEmployees')
             $('#btn').click(function () 
@@ -25,7 +27,7 @@
                     },
                     error : function(request,error)
                     {
-                        alert("Request Error: "+JSON.stringify(request));
+                        //alert("Request Error: "+JSON.stringify(request));
                     },                    
                 });                
             });
